@@ -35,7 +35,7 @@ in the project's main urls.py file:
 
     ... other code
     (r'^photologue/', include('photologue_custom.urls')),
-    (r'^photologue/', include('photologue.urls')),
+    url(r'^photologue/', include('photologue.urls', namespace='photologue')),
 
     ... other code
 
@@ -57,7 +57,7 @@ Edit our new urls.py file, and add:
     urlpatterns = patterns('',
                            
                            url(r'^gallerylist/$',
-                               GalleryListView.as_view(paginate_by=5), name='photologuecustom-gallery-list'),
+                               GalleryListView.as_view(paginate_by=5), name='photologue_custom-gallery-list'),
 
                            )
 
@@ -117,7 +117,7 @@ And call this new view from urls.py; here we are replacing the standard Photo li
 
                        url(r'^photolist/$',
                            PhotoJSONListView.as_view(),
-                           name='photologuecustom-photo-json-list'),
+                           name='photologue_custom-photo-json-list'),
 
                        # Other urls as required...
                        )
