@@ -36,8 +36,8 @@
 			            Gallery views<b class="caret"></b>
 			        </a>
 					<ul class="dropdown-menu">
-						<li class="sub-page"><a href="{% url 'pl-gallery-archive' %}">Date views</a></li>
-						<li class="sub-page"><a href="{% url 'photologue-gallery-list' %}">List views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue:pl-gallery-archive' %}">Date views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue:gallery-list' %}">List views</a></li>
 					</ul>
 				</li>
 			    <li class="photos dropdown">
@@ -45,8 +45,8 @@
 			            Photo views<b class="caret"></b>
 			        </a>
 					<ul class="dropdown-menu">
-						<li class="sub-page"><a href="{% url 'pl-photo-archive' %}">Date views</a></li>
-						<li class="sub-page"><a href="{% url 'photologue-photo-list' %}">List views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue:pl-photo-archive' %}">Date views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue:photo-list' %}">List views</a></li>
 					</ul>
 				</li>
 		    </ul>
