@@ -7,8 +7,8 @@ from django.views.generic import TemplateView
 admin.autodiscover()
 
 urlpatterns = patterns('',
-    url(r'^admin/', include(admin.site.urls)),
-    url(r'^photologue/', include('photologue.urls')),
-    url(r'^$', TemplateView.as_view(template_name="homepage.html"), name='homepage'),
-) + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
-
+                       url(r'^admin/', include(admin.site.urls)),
+                       url(r'^photologue/', include('photologue.urls', namespace='photologue')),
+                       url(r'^$', TemplateView.as_view(
+                           template_name="homepage.html"), name='homepage'),
+                       ) + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
