@@ -1,4 +1,4 @@
-{% extends "photologue/root.html" %}
+w{% extends "photologue/root.html" %}
 {% load url from future %}
 
 {% block title %}Galleries for {{ month|date:"F Y" }}{% endblock %}
@@ -22,6 +22,6 @@
     <p>No galleries were found.</p>
 {% endif %}
 
-<p><a href="{% url 'photologue-gallery-list' 1 %}">View all galleries.</a></p>
+<p><a href="{% url 'photologue:gallery-list' 1 %}">View all galleries.</a></p>
 
 {% endblock %}
