@@ -15,6 +15,6 @@
     </div>
     {% endfor %}
 </div>
-<p><a href="{% url 'photologue-gallery-list' %}">View all galleries</a></p>
+<p><a href="{% url 'photologue:gallery-list' %}">View all galleries</a></p>
 
 {% endblock %}
