@@ -16,6 +16,6 @@
 {% else %}
 <p>No photos were found.</p>
 {% endif %}
-<p><a href="{% url 'photologue-photo-list' %}">View all photographs</a></p>
+<p><a href="{% url 'photologue:photo-list' %}">View all photographs</a></p>
 
 {% endblock %}
