@@ -20,7 +20,7 @@
 {% if is_paginated %}
 <p>{{ paginator.count }} photos total.</p>
 <div id="page_controls">
-    <p>{% if page_obj.has_previous %}<a href="{% url 'photologue-photo-list' %}?page={{ page_obj.previous_page_number }}">Previous</a> | {% endif %} page {{ page_obj.number }} of {{ paginator.num_pages }} {% if page_obj.has_next %}| <a href="{% url 'photologue-photo-list' %}?page={{ page_obj.next_page_number }}">Next</a>{% endif %}</p>
+    <p>{% if page_obj.has_previous %}<a href="{% url 'photologue:photo-list' %}?page={{ page_obj.previous_page_number }}">Previous</a> | {% endif %} page {{ page_obj.number }} of {{ paginator.num_pages }} {% if page_obj.has_next %}| <a href="{% url 'photologue:photo-list' %}?page={{ page_obj.next_page_number }}">Next</a>{% endif %}</p>
 </div>
 {% endif %}
 
