@@ -14,7 +14,7 @@
         <div>{% trans "Filter by day" %}</div>
         <ul>
         {% for date in date_list %}
-            <li><a href="{% url 'photologue-gallery-archive-day' date.year date|date:"m"|lower date.day %}">{{ date|date:"d" }}</a></li>
+            <li><a href="{% url 'photologue:gallery-archive-day' date.year date|date:"m"|lower date.day %}">{{ date|date:"d" }}</a></li>
         {% endfor %}
         </ul>
 
@@ -31,7 +31,7 @@
         {% endif %}
 
         <div class="row col-lg-12">
-            <a href="{% url 'pl-gallery-archive-year' month.year %}" class="btn btn-default">{% trans "View all galleries for year" %}</a>
+            <a href="{% url 'photologue:pl-gallery-archive-year' month.year %}" class="btn btn-default">{% trans "View all galleries for year" %}</a>
         </div>
 
     </div>
