@@ -14,7 +14,7 @@
 		<div>{% trans "Filter by month" %}</div>
 		<ul>
 			{% for date in date_list %}
-				<li><a href="{% url 'photologue-gallery-archive-month' date.year date|date:"m"|lower %}">{{ date|date:"F" }}</a></li>
+				<li><a href="{% url 'photologue:gallery-archive-month' date.year date|date:"m"|lower %}">{{ date|date:"F" }}</a></li>
 			{% endfor %}
 		</ul>
 
@@ -31,7 +31,7 @@
 		{% endif %}
 
 	    <div class="row col-lg-12">
-            <a href="{% url 'pl-gallery-archive' %}" class="btn btn-default">{% trans "View all galleries" %}</a>
+            <a href="{% url 'photologue:pl-gallery-archive' %}" class="btn btn-default">{% trans "View all galleries" %}</a>
 	    </div>
 
 	</div>
