@@ -17,7 +17,7 @@
 		        </a>
 		    {% endfor %}
 
-            <p><a href="{% url 'photologue-gallery-list' %}" class="btn btn-default">{% trans "View all galleries" %}</a></p>
+            <p><a href="{% url 'photologue:gallery-list' %}" class="btn btn-default">{% trans "View all galleries" %}</a></p>
 	    </div>
 	</div>
 
