@@ -16,7 +16,7 @@
 		<div>{% trans "Filter by year" %}</div>
 		<ul>
 		{% for date in date_list %}
-			<li><a href="{% url 'pl-photo-archive-year' date.year %}">{{ date|date:"Y" }}</a></li>
+			<li><a href="{% url 'photologue:pl-photo-archive-year' date.year %}">{{ date|date:"Y" }}</a></li>
 		{% endfor %}
 		</ul>
 
