@@ -14,7 +14,7 @@
         <div>{% trans "Filter by day" %}</div>
         <ul>
         {% for date in date_list %}
-            <li><a href="{% url 'photologue-photo-archive-day' date.year date|date:"m"|lower date.day %}">{{ date|date:"d" }}</a></li>
+            <li><a href="{% url 'photologue:photo-archive-day' date.year date|date:"m"|lower date.day %}">{{ date|date:"d" }}</a></li>
         {% endfor %}
         </ul>
 
@@ -35,7 +35,7 @@
 		{% endif %}
 
         <div class="row col-lg-12">
-            <a href="{% url 'pl-photo-archive-year' month.year %}" class="btn btn-default">{% trans "View all photos for year" %}</a>
+            <a href="{% url 'photologue:pl-photo-archive-year' month.year %}" class="btn btn-default">{% trans "View all photos for year" %}</a>
         </div>
 
     </div>
